[gd_scene load_steps=15 format=2]

[ext_resource path="res://Escenas/Menus/gui_paper.png" type="Texture" id=1]
[ext_resource path="res://Escenas/Menus/MenuInicio.gd" type="Script" id=2]
[ext_resource path="res://Escenas/Menus/gui_paper_animated_button1.png" type="Texture" id=3]
[ext_resource path="res://Escenas/Menus/background_img_placeholder.jpeg" type="Texture" id=4]
[ext_resource path="res://Escenas/Menus/Musica_Menu_v2.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFontData" id=9]
font_path = "res://Escenas/Menus/Monsters Attack! 1937.TTF"

[sub_resource type="DynamicFont" id=10]
size = 90
outline_color = Color( 0.705882, 0.333333, 0.176471, 1 )
font_data = SubResource( 9 )

[sub_resource type="DynamicFontData" id=7]
font_path = "res://Escenas/Menus/Monsters Attack! 1937.TTF"

[sub_resource type="DynamicFont" id=8]
resource_local_to_scene = true
size = 50
outline_size = 8
outline_color = Color( 0.705882, 0.333333, 0.176471, 1 )
extra_spacing_top = -15
font_data = SubResource( 7 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 3 )
region_rect = Rect2( 100, 196, 88, 26 )

[sub_resource type="StyleBoxTexture" id=3]
texture = ExtResource( 3 )
region_rect = Rect2( 196, 230, 88, 24 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 3 )
region_rect = Rect2( 100, 196, 88, 26 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 3 )
region_rect = Rect2( 196, 230, 88, 24 )
modulate_color = Color( 0.662745, 0.631373, 0.631373, 1 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 3 )
region_rect = Rect2( 4, 195, 88, 27 )
margin_top = 1.43197

[node name="MenuInicio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
self_modulate = Color( 0.580392, 0.580392, 0.580392, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -400.0
margin_right = 400.0
margin_bottom = 400.0
rect_min_size = Vector2( 500, 500 )

[node name="NinePatchRect" type="NinePatchRect" parent="MarginContainer"]
margin_right = 800.0
margin_bottom = 800.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
region_rect = Rect2( 32, 32, 96, 96 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
margin_left = 150.0
margin_right = 650.0
margin_bottom = 687.0
grow_horizontal = 2
rect_min_size = Vector2( 500, 400 )
size_flags_horizontal = 4
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_constants/separation = 50

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer2"]
margin_right = 500.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2"]
margin_top = 50.0
margin_right = 500.0
margin_bottom = 237.0
size_flags_vertical = 0
custom_colors/font_color = Color( 0.556863, 0.133333, 0.133333, 1 )
custom_colors/font_color_shadow = Color( 0.219608, 0.172549, 0.172549, 1 )
custom_fonts/font = SubResource( 10 )
text = "Wizard
Crawler"
align = 1
autowrap = true
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
margin_top = 287.0
margin_right = 500.0
margin_bottom = 687.0
grow_horizontal = 2
rect_min_size = Vector2( 500, 400 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 20

[node name="Jugar" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_right = 500.0
margin_bottom = 120.0
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.74902, 0.501961, 1 )
custom_colors/font_color_focus = Color( 1, 0.653707, 0.501961, 1 )
custom_colors/font_color = Color( 1, 0.74902, 0.501961, 1 )
custom_colors/font_color_hover = Color( 1, 0.654902, 0.501961, 1 )
custom_colors/font_color_pressed = Color( 1, 0.654902, 0.501961, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Jugar"
icon_align = 1

[node name="Creditos" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 140.0
margin_right = 500.0
margin_bottom = 260.0
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.74902, 0.501961, 1 )
custom_colors/font_color_focus = Color( 1, 0.653707, 0.501961, 1 )
custom_colors/font_color = Color( 1, 0.74902, 0.501961, 1 )
custom_colors/font_color_hover = Color( 1, 0.654902, 0.501961, 1 )
custom_colors/font_color_pressed = Color( 1, 0.654902, 0.501961, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Creditos"
icon_align = 1

[node name="Salir" type="Button" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
margin_top = 280.0
margin_right = 500.0
margin_bottom = 400.0
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color_disabled = Color( 1, 0.74902, 0.501961, 1 )
custom_colors/font_color_focus = Color( 1, 0.653707, 0.501961, 1 )
custom_colors/font_color = Color( 1, 0.74902, 0.501961, 1 )
custom_colors/font_color_hover = Color( 1, 0.654902, 0.501961, 1 )
custom_colors/font_color_pressed = Color( 1, 0.654902, 0.501961, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "Salir"
icon_align = 1

[node name="MusicaMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/Creditos" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/VBoxContainer/Salir" to="." method="_on_Salir_pressed"]
